@@ -1,9 +1,7 @@
 package settings;
 
 
-import java.util.logging.Logger;
-
-public class PlanningSettings 
+public final class PlanningSettings
 {
 	
 	public static final String STRING_TYPE 	= "s";
@@ -39,102 +37,102 @@ public class PlanningSettings
 	public static void outputParameters() {
 		System.out.println("Parameters values: ");
 
-		if((boolean) get("randomEnv"))
+		if((boolean) get("randomEnv")) {
 			System.out.println("Environment: Random");
-		else
-			System.out.println("Environment: " + (String) get("inputFile"));
+		} else {
+			System.out.println("Environment: " + get("inputFile"));
+		}
 
-		if((boolean) get("useAdvice"))
+		if((boolean) get("useAdvice")) {
 			System.out.println("Use Advice: Yes");
-		else
+		} else {
 			System.out.println("Use Advice: No");
+		}
 
-		System.out.println("Sensing radius: " + (Float) get("sensingRadius"));
-		System.out.println("Batch size: " + (Integer) get("batchSize"));
-		System.out.println("Discretization cell size: " + (Float) get("gridSize"));
-		System.out.println("Bias prob: " + (Float) get("biasProb") + "\n");
+		System.out.println("Sensing radius: " + get("sensingRadius"));
+		System.out.println("Batch size: " + get("batchSize"));
+		System.out.println("Discretization cell size: " + get("gridSize"));
+		System.out.println("Bias prob: " + get("biasProb") + '\n');
 	}
 
-	public static final Logger RTREELOGGER = Logger.getLogger(Logger.GLOBAL_LOGGER_NAME);
+//	public static final Logger RTREELOGGER = Logger.getLogger(Logger.GLOBAL_LOGGER_NAME);
 	
 	
-	@SuppressWarnings("deprecation")
 	public static final Object[][] propertyData =
 		{
 			//Datatype:			Key:									Display name:							Version:		Default:																	Constraints:																				Comment:
 			//====================================================================================================================================================================================================================================================================================================================================
 				
-			{ FLOAT_TYPE,		BIAS_PROB,								"Biasing probability",					"1.0",			new Float(0.1),															"",
+			{ FLOAT_TYPE,		BIAS_PROB,								"Biasing probability",					"1.0", 			0.1F,															"",
 																					"Probability of accepting non-advice samples" },
 			
-			{ INTEGER_TYPE, 	BDD_FACTORY_CACHE_SIZE,					"Cache size for BDD factory",			"1.0",			new Integer(200000),															"",
+			{ INTEGER_TYPE, 	BDD_FACTORY_CACHE_SIZE,					"Cache size for BDD factory",			"1.0", 			200000,															"",
 																					"Cache size for BDD operations."},
 			
-			{ BOOLEAN_TYPE, 	USE_SPOT,								"Use SPOT or OWL",						"1.0",			new Boolean(false),															"",
+			{ BOOLEAN_TYPE, 	USE_SPOT,								"Use SPOT or OWL",						"1.0", 			Boolean.FALSE,															"",
 																					"Use SPOT or OWL for generating the automaton."},
 			
-			{ INTEGER_TYPE,		MAX_LEVEL_TRANSITION,					"Levels of transitions",				"1.0",			new Integer(4),																"",
+			{ INTEGER_TYPE,		MAX_LEVEL_TRANSITION,					"Levels of transitions",				"1.0", 			4,																"",
 																					"Possible levels of transitions possible"},
 			
-			{ BOOLEAN_TYPE,		RANDOM_ENV,								"Generate a random env",				"1.0",			new Boolean(false),															"",
+			{ BOOLEAN_TYPE,		RANDOM_ENV,								"Generate a random env",				"1.0", 			Boolean.FALSE,															"",
 																					"Generate a random environment and run the algorithm on that"},	
 			
-			{ INTEGER_TYPE,		TRANSITION_THRESHOLD,					"Threshold for transitions",			"1.0",			new Integer(20),															"",
+			{ INTEGER_TYPE,		TRANSITION_THRESHOLD,					"Threshold for transitions",			"1.0", 			20,															"",
 																					"Threshold after how many copies of a transition would decrease its level by 1."},
 			
-			{ FLOAT_TYPE,		ETA,									"Maximum radius for RRG",				"1.0",			new Float(1),																"",
+			{ FLOAT_TYPE,		ETA,									"Maximum radius for RRG",				"1.0", 			1.0F,																"",
 																					"Maximum radius to find the neighbours to which current point can have an edge"},
 			
-			{ FLOAT_TYPE,		SENSING_RADIUS,							"Sensing radius around the robot",		"1.0",			new Float(1),																"",
+			{ FLOAT_TYPE,		SENSING_RADIUS,							"Sensing radius around the robot",		"1.0", 			1.0F,																"",
 																					"The radius of the sensing area arond the robot"},
 			
-			{ INTEGER_TYPE,		BATCH_SIZE,								"Size of one batch",					"1.0",			new Integer(50),															"",
+			{ INTEGER_TYPE,		BATCH_SIZE,								"Size of one batch",					"1.0", 			50,															"",
 																					"Maximun size of each batch"},
 			
-			{ FLOAT_TYPE, 		GRID_SIZE,								"Size of grid for frontiers",			"1.0",			new Float(0.05),															"",
+			{ FLOAT_TYPE, 		GRID_SIZE,								"Size of grid for frontiers",			"1.0", 			0.05F,															"",
 																					"The size of each cell for computation of frontiers"},
 			
-			{ BOOLEAN_TYPE,		USE_ADVICE,								"Use advice or not",					"1.0",			new Boolean(true),															"",
+			{ BOOLEAN_TYPE,		USE_ADVICE,								"Use advice or not",					"1.0", 			Boolean.TRUE,															"",
 																					"Bias exploration using advice"},
 			
-			{ BOOLEAN_TYPE,		FIRST_EXPL_THEN_PLAN,					"Exploration first, then planning",		"1.0",			new Boolean(false),															"",
+			{ BOOLEAN_TYPE,		FIRST_EXPL_THEN_PLAN,					"Exploration first, then planning",		"1.0", 			Boolean.FALSE,															"",
 																					"First explore the environment completely, then do planning with known environment"},
 			
-			{ BOOLEAN_TYPE,		DEBUG,									"Debug mode",							"1.0",			new Boolean(false),															"",
+			{ BOOLEAN_TYPE,		DEBUG,									"Debug mode",							"1.0", 			Boolean.FALSE,															"",
 																					"Output a lot of things"},
 			
-			{ STRING_TYPE,		INPUT_FILE,								"Input file name",						"1.0",			new String("temp/Env/random"),												"",
+			{ STRING_TYPE,		INPUT_FILE,								"Input file name",						"1.0", 			"temp/Env/random",												"",
 																					"Name of the input files without the extension"},
 
-			{ BOOLEAN_TYPE,		ONLY_OPAQUE_OBSTACLES,					"Consider only Opaque obstacle",		"1.0",			new Boolean(true),															"",
+			{ BOOLEAN_TYPE,		ONLY_OPAQUE_OBSTACLES,					"Consider only Opaque obstacle",		"1.0", 			Boolean.TRUE,															"",
 																					"Flag for not having see through obstacles"},
 
-			{ INTEGER_TYPE,		NUMBER_OF_RUNS,							"number of runs to take average",		"1.0",			new Integer(1),															"",
+			{ INTEGER_TYPE,		NUMBER_OF_RUNS,							"number of runs to take average",		"1.0", 			1,															"",
 																					"Run the current configuration for these many times and take averange of the performance"},
 
-			{ BOOLEAN_TYPE,		GENERATE_PLOT,							"Show a plot of output",				"1.0",			new Boolean(false),															"",
+			{ BOOLEAN_TYPE,		GENERATE_PLOT,							"Show a plot of output",				"1.0", 			Boolean.FALSE,															"",
 																					"Generate plot showing the RRG graph and the trajectory"},
 
-			{ STRING_TYPE,		PROPERTY_FILE,							"Property file in HOA format",			"1.0",			new String(""),															"",
+			{ STRING_TYPE,		PROPERTY_FILE,							"Property file in HOA format",			"1.0", "",															"",
 																					"Specifying property as an automaton in HOA format"},
 
-			{ STRING_TYPE,		OUTPUT_DIRECTORY,						"Output directory",						"1.0",			new String("temp/"),															"",
+			{ STRING_TYPE,		OUTPUT_DIRECTORY,						"Output directory",						"1.0", "temp/",															"",
 																					"Directory to store the output"},
 
-			{ DOUBLE_TYPE,		TIMEOUT,								"Timeout for the algorithm",			"1.0",			new Double(Double.MAX_VALUE),															"",
+			{ DOUBLE_TYPE,		TIMEOUT,								"Timeout for the algorithm",			"1.0", 			Double.MAX_VALUE,															"",
 																					"After this much time, stop the run and output the results"},
 
-			{ BOOLEAN_TYPE,		EXPORT_PLOT_DATA,						"Export the data for plotting",			"1.0",			new Boolean(false),															"",
+			{ BOOLEAN_TYPE,		EXPORT_PLOT_DATA,						"Export the data for plotting",			"1.0", 			Boolean.FALSE,															"",
 																					"Export data for plotting after some intervals"},
 
-			{ BOOLEAN_TYPE,		EXPORT_PLOT_DATA,						"Export the data for plotting",			"1.0",			new Boolean(false),															"",
+			{ BOOLEAN_TYPE,		EXPORT_PLOT_DATA,						"Export the data for plotting",			"1.0", 			Boolean.FALSE,															"",
 																					"Export data after each batch"},
 
 		};
 																			
 	
-	@SuppressWarnings("deprecation")
-	public PlanningSettings(String[] args) throws Exception {
+	public PlanningSettings(String[] args) throws PlanningException {
 		boolean inputFile = true;
 		boolean[] usingFlag = new boolean[args.length];
 		try {
@@ -148,263 +146,181 @@ public class PlanningSettings
 		}
 		for(int i=0; i<args.length; i++) {
 			if(args[i].equals("--first-expl-then-plan")) {
-				set(FIRST_EXPL_THEN_PLAN, new Boolean(true));
+				set(FIRST_EXPL_THEN_PLAN, Boolean.TRUE);
 				usingFlag[i] = true;
 			}
 			if(args[i].equals("--debug")) {
-				set(DEBUG, new Boolean(true));
+				set(DEBUG, Boolean.TRUE);
 				usingFlag[i] = true;
 			}
 			if(args[i].equals("--no-advice")) {
-				set(USE_ADVICE, new Boolean(false));
+				set(USE_ADVICE, Boolean.FALSE);
 				usingFlag[i] = true;
 			}
 			if(args[i].equals("--random-env")) {
-				set(RANDOM_ENV, new Boolean(true));
+				set(RANDOM_ENV, Boolean.TRUE);
 				inputFile = true;
 				usingFlag[i] = true;
 			}
 			if(args[i].equals("--see-through-obstacles")) {
-				set(ONLY_OPAQUE_OBSTACLES, new Boolean(false));
+				set(ONLY_OPAQUE_OBSTACLES, Boolean.FALSE);
 				usingFlag[i] = true;
 			}
 			if(args[i].equals("--plot")) {
-				set(GENERATE_PLOT, new Boolean(true));
+				set(GENERATE_PLOT, Boolean.TRUE);
 				usingFlag[i] = true;
 			}
 			if(args[i].equals("--cell-size")) {
 				try {
-					set(GRID_SIZE, new Float(args[i+1]));
+					set(GRID_SIZE, Float.valueOf(args[i+1]));
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Grid size not specified");
+					throw new PlanningException("Grid size not specified");
 				}
 			}
 			if(args[i].equals("--sensing-radius")) {
 				try {
-					set(SENSING_RADIUS, new Float(args[i+1]));
+					set(SENSING_RADIUS, Float.valueOf(args[i+1]));
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Sensing radius not specified");
+					throw new PlanningException("Sensing radius not specified");
 				}
 			}
 			if(args[i].equals("--batch-size")) {
 				try {
-					set(BATCH_SIZE, new Integer(args[i+1]));
+					set(BATCH_SIZE, Integer.valueOf(args[i + 1]));
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Batch size not specified");
+					throw new PlanningException("Batch size not specified");
 				}
 			}
 			if(args[i].equals("--bias-prob")) {
 				try {
-					set(BIAS_PROB, new Float(args[i+1]));
+					set(BIAS_PROB, Float.valueOf(args[i+1]));
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Biasing probability not specified");
+					throw new PlanningException("Biasing probability not specified");
 				}
 			}
 			if(args[i].equals("--num-of-runs")) {
 				try {
-					set(NUMBER_OF_RUNS, new Integer(args[i+1]));
+					set(NUMBER_OF_RUNS, Integer.valueOf(args[i + 1]));
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Number of runs not specified");
+					throw new PlanningException("Number of runs not specified");
 				}
-				if(new Integer(args[i+1]) > 1)
-					set(GENERATE_PLOT, new Boolean(false));
+				if(Integer.parseInt(args[i + 1]) > 1) {
+					set(GENERATE_PLOT, Boolean.FALSE);
+				}
 			}
 			if(args[i].equals("--property-file")){
 				try {
-					set(PROPERTY_FILE, new String(args[i+1]));
+					set(PROPERTY_FILE, args[i + 1]);
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Property file not specified");
+					throw new PlanningException("Property file not specified");
 				}
 			}
 			if(args[i].equals("--output-dir")){
 				try {
-					set(OUTPUT_DIRECTORY, new String(args[i+1]));
+					set(OUTPUT_DIRECTORY, args[i + 1]);
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Output directory not specified");
+					throw new PlanningException("Output directory not specified");
 				}
 			}
 			if(args[i].equals("--timeout")){
 				try {
-					set(TIMEOUT, new Double(args[i+1]));
+					set(TIMEOUT, Double.valueOf(args[i+1]));
 					usingFlag[i] = true;
 					usingFlag[i+1] = true;
 				} catch (ArrayIndexOutOfBoundsException e){
-					throw new Exception("Timeout not specified");
+					throw new PlanningException("Timeout not specified");
 				}
 			}
 			if(args[i].equals("--export-plot-data")){
-				set(EXPORT_PLOT_DATA, new Boolean(true));
+				set(EXPORT_PLOT_DATA, Boolean.TRUE);
 				usingFlag[i] = true;
 			}
 			if(args[i].equals("--export-video-data")){
-				set(EXPORT_VIDEO_DATA, new Boolean(true));
+				set(EXPORT_VIDEO_DATA, Boolean.TRUE);
 				usingFlag[i] = true;
 			}
 		}
 		if(! inputFile){
-			throw new Exception("No input files given");
+			throw new PlanningException("No input files given");
 		}
 		for(int i=0; i < usingFlag.length; i++){
-			if(! usingFlag[i])
-				throw new Exception("Not a valid argument: " + args[i]);
+			if(! usingFlag[i]) {
+				throw new PlanningException("Not a valid argument: " + args[i]);
+			}
 		}
 	}
 
 
 
-	public void set(String VARIABLE, Object value)
+	public static void set(String VARIABLE, Object value)
 	{
-		if(VARIABLE.equals(BIAS_PROB)) {
-			propertyData[0][4]	= value;
-		}
-		else if (VARIABLE.equals(BDD_FACTORY_CACHE_SIZE)) {
-			propertyData[1][4]	= value;
-		}
-		else if (VARIABLE.equals(USE_SPOT)) {
-			propertyData[2][4]	= value;
-		}
-		else if (VARIABLE.equals(MAX_LEVEL_TRANSITION)) {
-			propertyData[3][4]	= value;
-		}
-		else if (VARIABLE.equals(RANDOM_ENV)) {
-			propertyData[4][4]	= value;
-		}
-		else if (VARIABLE.equals(TRANSITION_THRESHOLD)) {
-			propertyData[5][4]	= value;
-		}
-		else if (VARIABLE.equals(ETA)) {
-			propertyData[6][4]	= value;
-		}
-		else if (VARIABLE.equals(SENSING_RADIUS)) {
-			propertyData[7][4]	= value;
-		}
-		else if (VARIABLE.equals(BATCH_SIZE)) {
-			propertyData[8][4]	= value;
-		}
-		else if (VARIABLE.equals(GRID_SIZE)) {
-			propertyData[9][4]	= value;
-		}
-		else if (VARIABLE.equals(USE_ADVICE)) {
-			propertyData[10][4]	= value;
-		}
-		else if (VARIABLE.equals(FIRST_EXPL_THEN_PLAN)) {
-			propertyData[11][4]	= value;
-		}
-		else if (VARIABLE.equals(DEBUG)) {
-			propertyData[12][4]	= value;
-		}
-		else if (VARIABLE.equals(INPUT_FILE)) {
-			propertyData[13][4] = value;
-		}
-		else if (VARIABLE.equals(ONLY_OPAQUE_OBSTACLES)) {
-			propertyData[14][4] = value;
-		}
-		else if (VARIABLE.equals(NUMBER_OF_RUNS)) {
-			propertyData[15][4] = value;
-		}
-		else if (VARIABLE.equals(GENERATE_PLOT)) {
-			propertyData[16][4] = value;
-		}
-		else if (VARIABLE.equals(PROPERTY_FILE)) {
-			propertyData[17][4] = value;
-		}
-		else if (VARIABLE.equals(OUTPUT_DIRECTORY)) {
-			propertyData[18][4] = value;
-		}
-		else if (VARIABLE.equals(TIMEOUT)) {
-			propertyData[19][4] = value;
-		}
-		else if (VARIABLE.equals(EXPORT_PLOT_DATA)) {
-			propertyData[20][4] = value;
-		}
-		else if (VARIABLE.equals(EXPORT_VIDEO_DATA)) {
-			propertyData[21][4] = value;
+		switch (VARIABLE) {
+			case BIAS_PROB -> propertyData[0][4] = value;
+			case BDD_FACTORY_CACHE_SIZE -> propertyData[1][4] = value;
+			case USE_SPOT -> propertyData[2][4] = value;
+			case MAX_LEVEL_TRANSITION -> propertyData[3][4] = value;
+			case RANDOM_ENV -> propertyData[4][4] = value;
+			case TRANSITION_THRESHOLD -> propertyData[5][4] = value;
+			case ETA -> propertyData[6][4] = value;
+			case SENSING_RADIUS -> propertyData[7][4] = value;
+			case BATCH_SIZE -> propertyData[8][4] = value;
+			case GRID_SIZE -> propertyData[9][4] = value;
+			case USE_ADVICE -> propertyData[10][4] = value;
+			case FIRST_EXPL_THEN_PLAN -> propertyData[11][4] = value;
+			case DEBUG -> propertyData[12][4] = value;
+			case INPUT_FILE -> propertyData[13][4] = value;
+			case ONLY_OPAQUE_OBSTACLES -> propertyData[14][4] = value;
+			case NUMBER_OF_RUNS -> propertyData[15][4] = value;
+			case GENERATE_PLOT -> propertyData[16][4] = value;
+			case PROPERTY_FILE -> propertyData[17][4] = value;
+			case OUTPUT_DIRECTORY -> propertyData[18][4] = value;
+			case TIMEOUT -> propertyData[19][4] = value;
+			case EXPORT_PLOT_DATA -> propertyData[20][4] = value;
+			case EXPORT_VIDEO_DATA -> propertyData[21][4] = value;
 		}
 	}
 	
 	public static Object get(String VARIABLE)
 	{
-		if(VARIABLE.equals(BIAS_PROB)) {
-			return propertyData[0][4];
-		} 
-		else if (VARIABLE.equals(BDD_FACTORY_CACHE_SIZE)) {
-			return propertyData[1][4];
-		} 
-		else if (VARIABLE.equals(USE_SPOT)) {
-			return propertyData[2][4];
-		} 
-		else if (VARIABLE.equals(MAX_LEVEL_TRANSITION)) {
-			return propertyData[3][4];
-		} 
-		else if (VARIABLE.equals(RANDOM_ENV)) {
-			return propertyData[4][4];
-		} 
-		else if (VARIABLE.equals(TRANSITION_THRESHOLD)) {
-			return propertyData[5][4];
-		}
-		else if (VARIABLE.equals(ETA)) {
-			return propertyData[6][4];
-		}
-		else if (VARIABLE.equals(SENSING_RADIUS)) {
-			return propertyData[7][4];
-		}
-		else if (VARIABLE.equals(BATCH_SIZE)) {
-			return propertyData[8][4];
-		}
-		else if (VARIABLE.equals(GRID_SIZE)) {
-			return propertyData[9][4];
-		}
-		else if (VARIABLE.equals(USE_ADVICE)) {
-			return propertyData[10][4];
-		}
-		else if (VARIABLE.equals(FIRST_EXPL_THEN_PLAN)) {
-			return propertyData[11][4];
-		}
-		else if (VARIABLE.equals(DEBUG)) {
-			return propertyData[12][4];
-		}
-		else if (VARIABLE.equals(INPUT_FILE)) {
-			return propertyData[13][4];
-		}
-		else if (VARIABLE.equals(ONLY_OPAQUE_OBSTACLES)) {
-			return propertyData[14][4];
-		}
-		else if (VARIABLE.equals(NUMBER_OF_RUNS)) {
-			return propertyData[15][4];
-		}
-		else if (VARIABLE.equals(GENERATE_PLOT)) {
-			return propertyData[16][4];
-		}
-		else if (VARIABLE.equals(PROPERTY_FILE)) {
-			return propertyData[17][4];
-		}
-		else if (VARIABLE.equals(OUTPUT_DIRECTORY)) {
-			return propertyData[18][4];
-		}
-		else if (VARIABLE.equals(TIMEOUT)) {
-			return propertyData[19][4];
-		}
-		else if (VARIABLE.equals(EXPORT_PLOT_DATA)) {
-			return propertyData[20][4];
-		}
-		else if (VARIABLE.equals(EXPORT_VIDEO_DATA)) {
-			return propertyData[21][4];
-		}
-		return null;
+		return switch (VARIABLE) {
+			case BIAS_PROB -> propertyData[0][4];
+			case BDD_FACTORY_CACHE_SIZE -> propertyData[1][4];
+			case USE_SPOT -> propertyData[2][4];
+			case MAX_LEVEL_TRANSITION -> propertyData[3][4];
+			case RANDOM_ENV -> propertyData[4][4];
+			case TRANSITION_THRESHOLD -> propertyData[5][4];
+			case ETA -> propertyData[6][4];
+			case SENSING_RADIUS -> propertyData[7][4];
+			case BATCH_SIZE -> propertyData[8][4];
+			case GRID_SIZE -> propertyData[9][4];
+			case USE_ADVICE -> propertyData[10][4];
+			case FIRST_EXPL_THEN_PLAN -> propertyData[11][4];
+			case DEBUG -> propertyData[12][4];
+			case INPUT_FILE -> propertyData[13][4];
+			case ONLY_OPAQUE_OBSTACLES -> propertyData[14][4];
+			case NUMBER_OF_RUNS -> propertyData[15][4];
+			case GENERATE_PLOT -> propertyData[16][4];
+			case PROPERTY_FILE -> propertyData[17][4];
+			case OUTPUT_DIRECTORY -> propertyData[18][4];
+			case TIMEOUT -> propertyData[19][4];
+			case EXPORT_PLOT_DATA -> propertyData[20][4];
+			case EXPORT_VIDEO_DATA -> propertyData[21][4];
+			default -> null;
+		};
 	}
 
 
